# reachy_ultradancemix_9000

./: .gitignore  ANTENNA_ASSESSMENT.md  AWS_stream.md  README.md  buffered_bt_player.py  debug_antenna_math.py  debug_energy.py  pw_buffered_player.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
A-livegroovecurrent/: README.md  calibrate_environment.py  desk.npz  live_groove.py
docs/: bluetooth-streaming-challenge.md
reachy_dance_suite/: __main__.py  app.py  config.py  environment_profile.npz  mode_settings.json  mode_settings.py  move_config.py
reachy_dance_suite/archive/: spotify_choreographer.py  stream_reactor.py
reachy_dance_suite/behaviors/: bluetooth_streamer.py  connected_choreographer.py  live_groove.py
reachy_dance_suite/core/: audio_stream.py
reachy_dance_suite/spotify/: __init__.py  client.py  spotify-branding-guidelines.md  spotify-design-tokens.json  spotify-variables.css
reachy_dance_suite/static/: index.html  style.css
reachy_ultradancemix_9000/: app.py  config.py  environment_profile.npz  main.py  mode_settings.json  move_dampening.json  move_mirror.json
reachy_ultradancemix_9000/archive/: choreographer.py
reachy_ultradancemix_9000/behaviors/: __init__.py  connected_choreographer.py
reachy_ultradancemix_9000/core/: __init__.py  audio_stream.py  safety_mixer.py  speech_analyzer.py
reachy_ultradancemix_9000/static/: index.html  style.css
reachy_ultradancemix_9000/youtube_music/: client.py
